tarea1-cpp/lab1-testsuite-larger/lab1-test-dir/ParCPP.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module ParCPP where
import AbsCPP
import LexCPP
import ErrM

}

%name pProgram Program
%name pDef Def
%name pListDef ListDef
%name pDecl Decl
%name pListDecl ListDecl
%name pArg1 Arg1
%name pArg Arg
%name pListArg ListArg
%name pStm Stm
%name pListStm ListStm
%name pQId QId
%name pQConst QConst
%name pListQId ListQId
%name pExp16 Exp16
%name pListString ListString
%name pExp15 Exp15
%name pExp14 Exp14
%name pExp13 Exp13
%name pExp12 Exp12
%name pExp11 Exp11
%name pExp10 Exp10
%name pExp9 Exp9
%name pExp8 Exp8
%name pExp4 Exp4
%name pExp3 Exp3
%name pExp2 Exp2
%name pExp1 Exp1
%name pExp Exp
%name pExp5 Exp5
%name pExp6 Exp6
%name pExp7 Exp7
%name pListExp ListExp
%name pBuilInType BuilInType
%name pType Type
%name pListType ListType
%name pListId ListId
-- no lexer declaration
%monad { Err } { thenM } { returnM }
%tokentype {Token}
%token
  '!' { PT _ (TS _ 1) }
  '!=' { PT _ (TS _ 2) }
  '%' { PT _ (TS _ 3) }
  '&' { PT _ (TS _ 4) }
  '&&' { PT _ (TS _ 5) }
  '(' { PT _ (TS _ 6) }
  ')' { PT _ (TS _ 7) }
  '*' { PT _ (TS _ 8) }
  '+' { PT _ (TS _ 9) }
  '++' { PT _ (TS _ 10) }
  '+=' { PT _ (TS _ 11) }
  ',' { PT _ (TS _ 12) }
  '-' { PT _ (TS _ 13) }
  '--' { PT _ (TS _ 14) }
  '-=' { PT _ (TS _ 15) }
  '->' { PT _ (TS _ 16) }
  '.' { PT _ (TS _ 17) }
  '/' { PT _ (TS _ 18) }
  ':' { PT _ (TS _ 19) }
  '::' { PT _ (TS _ 20) }
  ';' { PT _ (TS _ 21) }
  '<' { PT _ (TS _ 22) }
  '<<' { PT _ (TS _ 23) }
  '<=' { PT _ (TS _ 24) }
  '=' { PT _ (TS _ 25) }
  '==' { PT _ (TS _ 26) }
  '>' { PT _ (TS _ 27) }
  '>=' { PT _ (TS _ 28) }
  '>>' { PT _ (TS _ 29) }
  '?' { PT _ (TS _ 30) }
  '[' { PT _ (TS _ 31) }
  ']' { PT _ (TS _ 32) }
  'bool' { PT _ (TS _ 33) }
  'const' { PT _ (TS _ 34) }
  'do' { PT _ (TS _ 35) }
  'double' { PT _ (TS _ 36) }
  'else' { PT _ (TS _ 37) }
  'false' { PT _ (TS _ 38) }
  'for' { PT _ (TS _ 39) }
  'if' { PT _ (TS _ 40) }
  'inline' { PT _ (TS _ 41) }
  'int' { PT _ (TS _ 42) }
  'return' { PT _ (TS _ 43) }
  'struct' { PT _ (TS _ 44) }
  'throw' { PT _ (TS _ 45) }
  'true' { PT _ (TS _ 46) }
  'typedef' { PT _ (TS _ 47) }
  'using' { PT _ (TS _ 48) }
  'void' { PT _ (TS _ 49) }
  'while' { PT _ (TS _ 50) }
  '{' { PT _ (TS _ 51) }
  '||' { PT _ (TS _ 52) }
  '}' { PT _ (TS _ 53) }

L_integ  { PT _ (TI $$) }
L_doubl  { PT _ (TD $$) }
L_charac { PT _ (TC $$) }
L_quoted { PT _ (TL $$) }
L_Id { PT _ (T_Id $$) }


%%

Integer :: { Integer } : L_integ  { (read ( $1)) :: Integer }
Double  :: { Double }  : L_doubl  { (read ( $1)) :: Double }
Char    :: { Char }    : L_charac { (read ( $1)) :: Char }
String  :: { String }  : L_quoted {  $1 }
Id    :: { Id} : L_Id { Id ($1)}

Program :: { Program }
Program : ListDef { AbsCPP.PDefs (reverse $1) }
Def :: { Def }
Def : Type Id '(' ListArg ')' '{' ListStm '}' { AbsCPP.DFun $1 $2 $4 (reverse $7) }
    | Type Id '(' ListArg ')' ';' { AbsCPP.DFunSBdy $1 $2 $4 }
    | 'inline' Type Id '(' ListArg ')' '{' ListStm '}' { AbsCPP.DFunInline $2 $3 $5 (reverse $8) }
    | 'inline' Type Id '(' ListArg ')' ';' { AbsCPP.DFunSBdyIL $2 $3 $5 }
    | 'using' QConst ';' { AbsCPP.DUs $2 }
    | 'typedef' Type Id ';' { AbsCPP.DType $2 $3 }
    | Decl { AbsCPP.DDecls $1 }
    | 'struct' Id '{' ListDecl '}' ';' { AbsCPP.DStruct $2 (reverse $4) }
ListDef :: { [Def] }
ListDef : {- empty -} { [] } | ListDef Def { flip (:) $1 $2 }
Decl :: { Decl }
Decl : Type ListId ';' { AbsCPP.Decl $1 $2 }
     | Type Id '=' Exp ';' { AbsCPP.DInit $1 $2 $4 }
ListDecl :: { [Decl] }
ListDecl : {- empty -} { [] } | ListDecl Decl { flip (:) $1 $2 }
Arg1 :: { Arg }
Arg1 : Type { AbsCPP.ADeclBlnck $1 }
     | Type Id { AbsCPP.ADecl $1 $2 }
     | Type Id '=' Exp15 { AbsCPP.ADeclIn $1 $2 $4 }
Arg :: { Arg }
Arg : 'const' Arg1 { AbsCPP.AConst $2 } | Arg1 { AbsCPP.ATodos $1 }
ListArg :: { [Arg] }
ListArg : {- empty -} { [] }
        | Arg { (:[]) $1 }
        | Arg ',' ListArg { (:) $1 $3 }
Stm :: { Stm }
Stm : ';' { AbsCPP.SEmpty }
    | Exp ';' { AbsCPP.SExp $1 }
    | Decl { AbsCPP.SDecls $1 }
    | 'return' Exp ';' { AbsCPP.SReturn $2 }
    | 'return' ';' { AbsCPP.SReturnVoid }
    | 'while' '(' Exp ')' Stm { AbsCPP.SWhile $3 $5 }
    | 'do' Stm 'while' '(' Exp ')' Stm { AbsCPP.SDoWhile $2 $5 $7 }
    | '{' ListStm '}' { AbsCPP.SBlock (reverse $2) }
    | 'if' '(' Exp ')' Stm { AbsCPP.SIf $3 $5 }
    | 'if' '(' Exp ')' Stm 'else' Stm { AbsCPP.SIfElse $3 $5 $7 }
    | 'for' '(' Decl Exp ';' Exp ')' Stm { AbsCPP.SFor $3 $4 $6 $8 }
    | 'typedef' Type Id ';' { AbsCPP.SType $2 $3 }
    | 'const' Type Exp2 ';' { AbsCPP.SConst $2 $3 }
    | 'struct' Id '{' ListDecl '}' ';' { AbsCPP.SStruct $2 (reverse $4) }
ListStm :: { [Stm] }
ListStm : {- empty -} { [] } | ListStm Stm { flip (:) $1 $2 }
QId :: { QId }
QId : Id { AbsCPP.QId $1 }
    | Id '<' ListType '>' { AbsCPP.QIdT $1 $3 }
QConst :: { QConst }
QConst : ListQId { AbsCPP.QConst $1 }
ListQId :: { [QId] }
ListQId : QId { (:[]) $1 } | QId '::' ListQId { (:) $1 $3 }
Exp16 :: { Exp }
Exp16 : 'true' { AbsCPP.ETrue }
      | 'false' { AbsCPP.EFalse }
      | Integer { AbsCPP.EInt $1 }
      | Double { AbsCPP.EDouble $1 }
      | Char { AbsCPP.EChar $1 }
      | ListString { AbsCPP.EString $1 }
      | '(' Exp ')' { $2 }
ListString :: { [String] }
ListString : String { (:[]) $1 } | String ListString { (:) $1 $2 }
Exp15 :: { Exp }
Exp15 : QConst { AbsCPP.EQct $1 }
      | Id '[' Exp ']' { AbsCPP.EArr $1 $3 }
      | Id '(' ListExp ')' { AbsCPP.EApp $1 $3 }
      | Exp16 { $1 }
Exp14 :: { Exp }
Exp14 : Exp15 '.' Exp15 { AbsCPP.EPEstr $1 $3 }
      | Exp15 '->' Exp15 { AbsCPP.EProy $1 $3 }
      | Exp15 '++' { AbsCPP.EPIncr $1 }
      | Exp15 '--' { AbsCPP.EPDecr $1 }
      | '*' Exp15 { AbsCPP.EPDecr $2 }
      | Exp15 { $1 }
Exp13 :: { Exp }
Exp13 : '++' Exp14 { AbsCPP.EIncr $2 }
      | '--' Exp14 { AbsCPP.EDecr $2 }
      | '!' Exp14 { AbsCPP.ENeg $2 }
      | Exp14 { $1 }
Exp12 :: { Exp }
Exp12 : Exp12 '*' Exp13 { AbsCPP.ETimes $1 $3 }
      | Exp12 '/' Exp13 { AbsCPP.EDiv $1 $3 }
      | Exp12 '%' Exp13 { AbsCPP.ERest $1 $3 }
      | Exp13 { $1 }
Exp11 :: { Exp }
Exp11 : Exp11 '+' Exp12 { AbsCPP.EPlus $1 $3 }
      | Exp11 '-' Exp12 { AbsCPP.EMinus $1 $3 }
      | Exp12 { $1 }
Exp10 :: { Exp }
Exp10 : Exp10 '<<' Exp11 { AbsCPP.EShiftL $1 $3 }
      | Exp10 '>>' Exp11 { AbsCPP.EShiftR $1 $3 }
      | Exp11 { $1 }
Exp9 :: { Exp }
Exp9 : Exp9 '<' Exp10 { AbsCPP.ELt $1 $3 }
     | Exp9 '>' Exp10 { AbsCPP.EGt $1 $3 }
     | Exp9 '<=' Exp10 { AbsCPP.ELtEq $1 $3 }
     | Exp9 '>=' Exp10 { AbsCPP.EGtEq $1 $3 }
     | Exp10 { $1 }
Exp8 :: { Exp }
Exp8 : Exp8 '==' Exp9 { AbsCPP.EEq $1 $3 }
     | Exp8 '!=' Exp9 { AbsCPP.ENEq $1 $3 }
     | Exp9 { $1 }
Exp4 :: { Exp }
Exp4 : Exp4 '&&' Exp5 { AbsCPP.EAnd $1 $3 } | Exp5 { $1 }
Exp3 :: { Exp }
Exp3 : Exp3 '||' Exp4 { AbsCPP.EOr $1 $3 } | Exp4 { $1 }
Exp2 :: { Exp }
Exp2 : Exp3 '-=' Exp2 { AbsCPP.EMinAss $1 $3 }
     | Exp3 '+=' Exp2 { AbsCPP.EAddAss $1 $3 }
     | Exp3 '=' Exp2 { AbsCPP.EAss $1 $3 }
     | Exp3 '?' Exp2 ':' Exp2 { AbsCPP.ECond $1 $3 $5 }
     | Exp3 { $1 }
Exp1 :: { Exp }
Exp1 : 'throw' Exp2 { AbsCPP.EExcp $2 } | Exp2 { $1 }
Exp :: { Exp }
Exp : Exp1 { $1 }
Exp5 :: { Exp }
Exp5 : Exp6 { $1 }
Exp6 :: { Exp }
Exp6 : Exp7 { $1 }
Exp7 :: { Exp }
Exp7 : Exp8 { $1 }
ListExp :: { [Exp] }
ListExp : {- empty -} { [] }
        | Exp { (:[]) $1 }
        | Exp ',' ListExp { (:) $1 $3 }
BuilInType :: { BuilInType }
BuilInType : 'bool' { AbsCPP.BuilInType_bool }
           | 'int' { AbsCPP.BuilInType_int }
           | 'double' { AbsCPP.BuilInType_double }
           | 'void' { AbsCPP.BuilInType_void }
Type :: { Type }
Type : BuilInType { AbsCPP.TypeB $1 }
     | QConst { AbsCPP.TypeQ $1 }
     | Type '&' { AbsCPP.TypeP $1 }
ListType :: { [Type] }
ListType : Type { (:[]) $1 } | Type ',' ListType { (:) $1 $3 }
ListId :: { [Id] }
ListId : Id { (:[]) $1 } | Id ',' ListId { (:) $1 $3 }
{

returnM :: a -> Err a
returnM = return

thenM :: Err a -> (a -> Err b) -> Err b
thenM = (>>=)

happyError :: [Token] -> Err a
happyError ts =
  Bad $ "syntax error at " ++ tokenPos ts ++ 
  case ts of
    [] -> []
    [Err _] -> " due to lexer error"
    t:_ -> " before `" ++ id(prToken t) ++ "'"

myLexer = tokens
}
