Task 1/tests/lab1-testsuite/lab1-test-dir/ParCpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParCpp.y
-----------------------------------------------------------------------------

state 41 contains 1 shift/reduce conflicts.
state 58 contains 1 shift/reduce conflicts.
state 276 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pDecl -> Decl                               (3)
	%start_pListDecl -> ListDecl                       (4)
	%start_pArg1 -> Arg1                               (5)
	%start_pArg -> Arg                                 (6)
	%start_pListArg -> ListArg                         (7)
	%start_pStm -> Stm                                 (8)
	%start_pListStm -> ListStm                         (9)
	%start_pQId -> QId                                 (10)
	%start_pQConst -> QConst                           (11)
	%start_pListQId -> ListQId                         (12)
	%start_pExp16 -> Exp16                             (13)
	%start_pListString -> ListString                   (14)
	%start_pExp15 -> Exp15                             (15)
	%start_pExp14 -> Exp14                             (16)
	%start_pExp13 -> Exp13                             (17)
	%start_pExp12 -> Exp12                             (18)
	%start_pExp11 -> Exp11                             (19)
	%start_pExp10 -> Exp10                             (20)
	%start_pExp9 -> Exp9                               (21)
	%start_pExp8 -> Exp8                               (22)
	%start_pExp4 -> Exp4                               (23)
	%start_pExp3 -> Exp3                               (24)
	%start_pExp2 -> Exp2                               (25)
	%start_pExp1 -> Exp1                               (26)
	%start_pExp -> Exp                                 (27)
	%start_pExp5 -> Exp5                               (28)
	%start_pExp6 -> Exp6                               (29)
	%start_pExp7 -> Exp7                               (30)
	%start_pListExp -> ListExp                         (31)
	%start_pBuilInType -> BuilInType                   (32)
	%start_pType -> Type                               (33)
	%start_pListType -> ListType                       (34)
	%start_pListId -> ListId                           (35)
	Integer -> L_integ                                 (36)
	Double -> L_doubl                                  (37)
	Char -> L_charac                                   (38)
	String -> L_quoted                                 (39)
	Id -> L_Id                                         (40)
	Program -> ListDef                                 (41)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (42)
	Def -> Type Id '(' ListArg ')' ';'                 (43)
	Def -> 'inline' Type Id '(' ListArg ')' '{' ListStm '}'   (44)
	Def -> 'inline' Type Id '(' ListArg ')' ';'        (45)
	Def -> 'using' QConst ';'                          (46)
	Def -> 'typedef' Type Id ';'                       (47)
	Def -> Decl                                        (48)
	Def -> 'struct' Id '{' ListDecl '}' ';'            (49)
	ListDef ->                                         (50)
	ListDef -> ListDef Def                             (51)
	Decl -> Type ListId ';'                            (52)
	Decl -> Type Id '=' Exp ';'                        (53)
	ListDecl ->                                        (54)
	ListDecl -> ListDecl Decl                          (55)
	Arg1 -> Type                                       (56)
	Arg1 -> Type Id                                    (57)
	Arg1 -> Type Id '=' Exp15                          (58)
	Arg -> 'const' Arg1                                (59)
	Arg -> Arg1                                        (60)
	ListArg ->                                         (61)
	ListArg -> Arg                                     (62)
	ListArg -> Arg ',' ListArg                         (63)
	Stm -> ';'                                         (64)
	Stm -> Exp ';'                                     (65)
	Stm -> Decl                                        (66)
	Stm -> 'return' Exp ';'                            (67)
	Stm -> 'return' ';'                                (68)
	Stm -> 'while' '(' Exp ')' Stm                     (69)
	Stm -> 'do' Stm 'while' '(' Exp ')' Stm            (70)
	Stm -> '{' ListStm '}'                             (71)
	Stm -> 'if' '(' Exp ')' Stm                        (72)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (73)
	Stm -> 'for' '(' Decl Exp ';' Exp ')' Stm          (74)
	Stm -> 'typedef' Type Id ';'                       (75)
	Stm -> 'const' Type Exp2 ';'                       (76)
	Stm -> 'struct' Id '{' ListDecl '}' ';'            (77)
	ListStm ->                                         (78)
	ListStm -> ListStm Stm                             (79)
	QId -> Id                                          (80)
	QId -> Id '<' ListType '>'                         (81)
	QConst -> ListQId                                  (82)
	ListQId -> QId                                     (83)
	ListQId -> QId '::' ListQId                        (84)
	Exp16 -> 'true'                                    (85)
	Exp16 -> 'false'                                   (86)
	Exp16 -> Integer                                   (87)
	Exp16 -> Double                                    (88)
	Exp16 -> Char                                      (89)
	Exp16 -> ListString                                (90)
	Exp16 -> '(' Exp ')'                               (91)
	ListString -> String                               (92)
	ListString -> String ListString                    (93)
	Exp15 -> QConst                                    (94)
	Exp15 -> Id '[' Exp ']'                            (95)
	Exp15 -> Id '(' ListExp ')'                        (96)
	Exp15 -> Exp16                                     (97)
	Exp14 -> Exp15 '.' Exp15                           (98)
	Exp14 -> Exp15 '->' Exp15                          (99)
	Exp14 -> Exp15 '++'                                (100)
	Exp14 -> Exp15 '--'                                (101)
	Exp14 -> '*' Exp15                                 (102)
	Exp14 -> Exp15                                     (103)
	Exp13 -> '++' Exp14                                (104)
	Exp13 -> '--' Exp14                                (105)
	Exp13 -> '!' Exp14                                 (106)
	Exp13 -> Exp14                                     (107)
	Exp12 -> Exp12 '*' Exp13                           (108)
	Exp12 -> Exp12 '/' Exp13                           (109)
	Exp12 -> Exp12 '%' Exp13                           (110)
	Exp12 -> Exp13                                     (111)
	Exp11 -> Exp11 '+' Exp12                           (112)
	Exp11 -> Exp11 '-' Exp12                           (113)
	Exp11 -> Exp12                                     (114)
	Exp10 -> Exp10 '<<' Exp11                          (115)
	Exp10 -> Exp10 '>>' Exp11                          (116)
	Exp10 -> Exp11                                     (117)
	Exp9 -> Exp9 '<' Exp10                             (118)
	Exp9 -> Exp9 '>' Exp10                             (119)
	Exp9 -> Exp9 '<=' Exp10                            (120)
	Exp9 -> Exp9 '>=' Exp10                            (121)
	Exp9 -> Exp10                                      (122)
	Exp8 -> Exp8 '==' Exp9                             (123)
	Exp8 -> Exp8 '!=' Exp9                             (124)
	Exp8 -> Exp9                                       (125)
	Exp4 -> Exp4 '&&' Exp5                             (126)
	Exp4 -> Exp5                                       (127)
	Exp3 -> Exp3 '||' Exp4                             (128)
	Exp3 -> Exp4                                       (129)
	Exp2 -> Exp3 '-=' Exp2                             (130)
	Exp2 -> Exp3 '+=' Exp2                             (131)
	Exp2 -> Exp3 '=' Exp2                              (132)
	Exp2 -> Exp3 '?' Exp2 ':' Exp2                     (133)
	Exp2 -> Exp3                                       (134)
	Exp1 -> 'throw' Exp2                               (135)
	Exp1 -> Exp2                                       (136)
	Exp -> Exp1                                        (137)
	Exp5 -> Exp6                                       (138)
	Exp6 -> Exp7                                       (139)
	Exp7 -> Exp8                                       (140)
	ListExp ->                                         (141)
	ListExp -> Exp                                     (142)
	ListExp -> Exp ',' ListExp                         (143)
	BuilInType -> 'bool'                               (144)
	BuilInType -> 'int'                                (145)
	BuilInType -> 'double'                             (146)
	BuilInType -> 'void'                               (147)
	Type -> BuilInType                                 (148)
	Type -> QConst                                     (149)
	Type -> Type '&'                                   (150)
	ListType -> Type                                   (151)
	ListType -> Type ',' ListType                      (152)
	ListId -> Id                                       (153)
	ListId -> Id ',' ListId                            (154)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'const'        { PT _ (TS _ 34) }
	'do'           { PT _ (TS _ 35) }
	'double'       { PT _ (TS _ 36) }
	'else'         { PT _ (TS _ 37) }
	'false'        { PT _ (TS _ 38) }
	'for'          { PT _ (TS _ 39) }
	'if'           { PT _ (TS _ 40) }
	'inline'       { PT _ (TS _ 41) }
	'int'          { PT _ (TS _ 42) }
	'return'       { PT _ (TS _ 43) }
	'struct'       { PT _ (TS _ 44) }
	'throw'        { PT _ (TS _ 45) }
	'true'         { PT _ (TS _ 46) }
	'typedef'      { PT _ (TS _ 47) }
	'using'        { PT _ (TS _ 48) }
	'void'         { PT _ (TS _ 49) }
	'while'        { PT _ (TS _ 50) }
	'{'            { PT _ (TS _ 51) }
	'||'           { PT _ (TS _ 52) }
	'}'            { PT _ (TS _ 53) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pDecl    rule  3
	%start_pListDecl rule  4
	%start_pArg1    rule  5
	%start_pArg     rule  6
	%start_pListArg rule  7
	%start_pStm     rule  8
	%start_pListStm rule  9
	%start_pQId     rule  10
	%start_pQConst  rule  11
	%start_pListQId rule  12
	%start_pExp16   rule  13
	%start_pListString rule  14
	%start_pExp15   rule  15
	%start_pExp14   rule  16
	%start_pExp13   rule  17
	%start_pExp12   rule  18
	%start_pExp11   rule  19
	%start_pExp10   rule  20
	%start_pExp9    rule  21
	%start_pExp8    rule  22
	%start_pExp4    rule  23
	%start_pExp3    rule  24
	%start_pExp2    rule  25
	%start_pExp1    rule  26
	%start_pExp     rule  27
	%start_pExp5    rule  28
	%start_pExp6    rule  29
	%start_pExp7    rule  30
	%start_pListExp rule  31
	%start_pBuilInType rule  32
	%start_pType    rule  33
	%start_pListType rule  34
	%start_pListId  rule  35
	Integer         rule  36
	Double          rule  37
	Char            rule  38
	String          rule  39
	Id              rule  40
	Program         rule  41
	Def             rules 42, 43, 44, 45, 46, 47, 48, 49
	ListDef         rules 50, 51
	Decl            rules 52, 53
	ListDecl        rules 54, 55
	Arg1            rules 56, 57, 58
	Arg             rules 59, 60
	ListArg         rules 61, 62, 63
	Stm             rules 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77
	ListStm         rules 78, 79
	QId             rules 80, 81
	QConst          rule  82
	ListQId         rules 83, 84
	Exp16           rules 85, 86, 87, 88, 89, 90, 91
	ListString      rules 92, 93
	Exp15           rules 94, 95, 96, 97
	Exp14           rules 98, 99, 100, 101, 102, 103
	Exp13           rules 104, 105, 106, 107
	Exp12           rules 108, 109, 110, 111
	Exp11           rules 112, 113, 114
	Exp10           rules 115, 116, 117
	Exp9            rules 118, 119, 120, 121, 122
	Exp8            rules 123, 124, 125
	Exp4            rules 126, 127
	Exp3            rules 128, 129
	Exp2            rules 130, 131, 132, 133, 134
	Exp1            rules 135, 136
	Exp             rule  137
	Exp5            rule  138
	Exp6            rule  139
	Exp7            rule  140
	ListExp         rules 141, 142, 143
	BuilInType      rules 144, 145, 146, 147
	Type            rules 148, 149, 150
	ListType        rules 151, 152
	ListId          rules 153, 154

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'bool'         reduce using rule 50
	'double'       reduce using rule 50
	'inline'       reduce using rule 50
	'int'          reduce using rule 50
	'struct'       reduce using rule 50
	'typedef'      reduce using rule 50
	'using'        reduce using rule 50
	'void'         reduce using rule 50
	L_Id           reduce using rule 50
	%eof           reduce using rule 50

	Program        goto state 144
	ListDef        goto state 145

State 1

	%start_pDef -> . Def                                (rule 1)

	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'inline'       shift, and enter state 140
	'int'          shift, and enter state 50
	'struct'       shift, and enter state 141
	'typedef'      shift, and enter state 142
	'using'        shift, and enter state 143
	'void'         shift, and enter state 51
	L_Id           shift, and enter state 40

	Id             goto state 41
	Def            goto state 137
	Decl           goto state 138
	QId            goto state 42
	QConst         goto state 43
	ListQId        goto state 44
	BuilInType     goto state 45
	Type           goto state 139

State 2

	%start_pListDef -> . ListDef                        (rule 2)

	'bool'         reduce using rule 50
	'double'       reduce using rule 50
	'inline'       reduce using rule 50
	'int'          reduce using rule 50
	'struct'       reduce using rule 50
	'typedef'      reduce using rule 50
	'using'        reduce using rule 50
	'void'         reduce using rule 50
	L_Id           reduce using rule 50
	%eof           reduce using rule 50

	ListDef        goto state 136

State 3

	%start_pDecl -> . Decl                              (rule 3)

	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'int'          shift, and enter state 50
	'void'         shift, and enter state 51
	L_Id           shift, and enter state 40

	Id             goto state 41
	Decl           goto state 135
	QId            goto state 42
	QConst         goto state 43
	ListQId        goto state 44
	BuilInType     goto state 45
	Type           goto state 116

State 4

	%start_pListDecl -> . ListDecl                      (rule 4)

	'bool'         reduce using rule 54
	'double'       reduce using rule 54
	'int'          reduce using rule 54
	'void'         reduce using rule 54
	L_Id           reduce using rule 54
	%eof           reduce using rule 54

	ListDecl       goto state 134

State 5

	%start_pArg1 -> . Arg1                              (rule 5)

	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'int'          shift, and enter state 50
	'void'         shift, and enter state 51
	L_Id           shift, and enter state 40

	Id             goto state 41
	Arg1           goto state 133
	QId            goto state 42
	QConst         goto state 43
	ListQId        goto state 44
	BuilInType     goto state 45
	Type           goto state 130

State 6

	%start_pArg -> . Arg                                (rule 6)

	'bool'         shift, and enter state 48
	'const'        shift, and enter state 131
	'double'       shift, and enter state 49
	'int'          shift, and enter state 50
	'void'         shift, and enter state 51
	L_Id           shift, and enter state 40

	Id             goto state 41
	Arg1           goto state 127
	Arg            goto state 132
	QId            goto state 42
	QConst         goto state 43
	ListQId        goto state 44
	BuilInType     goto state 45
	Type           goto state 130

State 7

	%start_pListArg -> . ListArg                        (rule 7)

	'bool'         shift, and enter state 48
	'const'        shift, and enter state 131
	'double'       shift, and enter state 49
	'int'          shift, and enter state 50
	'void'         shift, and enter state 51
	L_Id           shift, and enter state 40
	%eof           reduce using rule 61

	Id             goto state 41
	Arg1           goto state 127
	Arg            goto state 128
	ListArg        goto state 129
	QId            goto state 42
	QConst         goto state 43
	ListQId        goto state 44
	BuilInType     goto state 45
	Type           goto state 130

State 8

	%start_pStm -> . Stm                                (rule 8)

	'!'            shift, and enter state 79
	'('            shift, and enter state 80
	'*'            shift, and enter state 81
	'++'           shift, and enter state 82
	'--'           shift, and enter state 83
	';'            shift, and enter state 117
	'bool'         shift, and enter state 48
	'const'        shift, and enter state 118
	'do'           shift, and enter state 119
	'double'       shift, and enter state 49
	'false'        shift, and enter state 84
	'for'          shift, and enter state 120
	'if'           shift, and enter state 121
	'int'          shift, and enter state 50
	'return'       shift, and enter state 122
	'struct'       shift, and enter state 123
	'throw'        shift, and enter state 85
	'true'         shift, and enter state 86
	'typedef'      shift, and enter state 124
	'void'         shift, and enter state 51
	'while'        shift, and enter state 125
	'{'            shift, and enter state 126
	L_integ        shift, and enter state 37
	L_doubl        shift, and enter state 87
	L_charac       shift, and enter state 88
	L_quoted       shift, and enter state 89
	L_Id           shift, and enter state 40

	Integer        goto state 54
	Double         goto state 55
	Char           goto state 56
	String         goto state 57
	Id             goto state 58
	Decl           goto state 112
	Stm            goto state 113
	QId            goto state 42
	QConst         goto state 114
	ListQId        goto state 44
	Exp16          goto state 60
	ListString     goto state 61
	Exp15          goto state 62
	Exp14          goto state 63
	Exp13          goto state 64
	Exp12          goto state 65
	Exp11          goto state 66
	Exp10          goto state 67
	Exp9           goto state 68
	Exp8           goto state 69
	Exp4           goto state 70
	Exp3           goto state 71
	Exp2           goto state 72
	Exp1           goto state 73
	Exp            goto state 115
	Exp5           goto state 75
	Exp6           goto state 76
	Exp7           goto state 77
	BuilInType     goto state 45
	Type           goto state 116

State 9

	%start_pListStm -> . ListStm                        (rule 9)

	'!'            reduce using rule 78
	'('            reduce using rule 78
	'*'            reduce using rule 78
	'++'           reduce using rule 78
	'--'           reduce using rule 78
	';'            reduce using rule 78
	'bool'         reduce using rule 78
	'const'        reduce using rule 78
	'do'           reduce using rule 78
	'double'       reduce using rule 78
	'false'        reduce using rule 78
	'for'          reduce using rule 78
	'if'           reduce using rule 78
	'int'          reduce using rule 78
	'return'       reduce using rule 78
	'struct'       reduce using rule 78
	'throw'        reduce using rule 78
	'true'         reduce using rule 78
	'typedef'      reduce using rule 78
	'void'         reduce using rule 78
	'while'        reduce using rule 78
	'{'            reduce using rule 78
	L_integ        reduce using rule 78
	L_doubl        reduce using rule 78
	L_charac       reduce using rule 78
	L_quoted       reduce using rule 78
	L_Id           reduce using rule 78
	%eof           reduce using rule 78

	ListStm        goto state 111

State 10

	%start_pQId -> . QId                                (rule 10)

	L_Id           shift, and enter state 40

	Id             goto state 41
	QId            goto state 110

State 11

	%start_pQConst -> . QConst                          (rule 11)

	L_Id           shift, and enter state 40

	Id             goto state 41
	QId            goto state 42
	QConst         goto state 109
	ListQId        goto state 44

State 12

	%start_pListQId -> . ListQId                        (rule 12)

	L_Id           shift, and enter state 40

	Id             goto state 41
	QId            goto state 42
	ListQId        goto state 108

State 13

	%start_pExp16 -> . Exp16                            (rule 13)

	'('            shift, and enter state 80
	'false'        shift, and enter state 84
	'true'         shift, and enter state 86
	L_integ        shift, and enter state 37
	L_doubl        shift, and enter state 87
	L_charac       shift, and enter state 88
	L_quoted       shift, and enter state 89

	Integer        goto state 54
	Double         goto state 55
	Char           goto state 56
	String         goto state 57
	Exp16          goto state 107
	ListString     goto state 61

State 14

	%start_pListString -> . ListString                  (rule 14)

	L_quoted       shift, and enter state 89

	String         goto state 57
	ListString     goto state 106

State 15

	%start_pExp15 -> . Exp15                            (rule 15)

	'('            shift, and enter state 80
	'false'        shift, and enter state 84
	'true'         shift, and enter state 86
	L_integ        shift, and enter state 37
	L_doubl        shift, and enter state 87
	L_charac       shift, and enter state 88
	L_quoted       shift, and enter state 89
	L_Id           shift, and enter state 40
